[tool.poetry]
name = "modus-print"
version = "0.1.0"
description = ""
authors = ["Ray Tran <rt@elixirsoftware.co.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-escpos = { extras = ["usb"], version = "^3.1" }


[tool.poetry.group.dev.dependencies]
ipython = "^8.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
